--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "nooku/installer",
     "type": "composer-plugin",
     "license": "GPLv3",
-    "description": "A Composer plugin to install Nooku Framework.",
-    "keywords": ["nooku", "framework", "platform", "component", "installer"],
+    "description": "A Composer plugin to install Nooku Framework into any Joomla site.",
+    "keywords": ["nooku", "framework", "joomla", "platform", "component", "installer"],
     "homepage": "https://github.com/nooku/nooku-installer",
     "authors": [
         {
