--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,6 @@
         "class": "Nooku\\Composer\\InstallerPlugin"
     },
     "require": {
-        "composer-plugin-api": "1.0.0"
+        "composer-plugin-api": "^1.0"
     }
 }
